# state-machine

./: Cargo.toml  README.md
src/: lib.rs
src/machine/: backoff.rs  data.rs  error.rs  mod.rs  state.rs
tests/: basic.rs  custom.rs  lib.rs  propagate_error.rs
