[package]
name = "state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4"
env_logger = "0.10"

[[test]]
path = "tests/lib.rs"
name = "integration"