[package]
name = "sfn-machine"
version = "0.1.3"
edition = "2021"
authors = ["Ezeabasili Anthony <ezeabasilianthony@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Basillica/state-machine"
documentation = "https://docs.rs/sfn-machine/latest/sfn_machine"
homepage = "https://github.com/Basillica/state-machine"
description = """
An implementation of a state machine for tasks orchestration and chaining
using a linked list to guarantee coherence and flexibility when a different 
procedure is desired
"""
categories = ["state-machine", "tasks-orchestration", "step-function"]
autotests = false
exclude = ["/.github/*"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

[[test]]
path = "tests/lib.rs"
name = "integration"

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
opt-level = 3
debug = true